--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -17,7 +17,6 @@
     <link href="{{ ASSET_PATH }}/css/pygments.css" rel="stylesheet" type="text/css" media="all">
     <script type="text/javascript" src="{{ BASE_PATH }}/assets/js/jquery.js"></script>
     <script type="text/javascript" src="{{ BASE_PATH }}/assets/js/bootstrap.min.js"></script>
-
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -29,7 +28,7 @@
 
   <body>
 
-    <div class="navbar">
+    <div class="navbar" id="top-navbar">
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
@@ -37,6 +36,11 @@
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+          </ul>
+          <ul class="nav subscription pull-right" data-subscription="rss">
+            <li>
+              <a href="{{BASE_PATH}}/atom.xml" rel="nofollow" title="subscribe via RSS">RSS</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -49,7 +53,7 @@
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012 
+        <p>&copy; {{ site.author.name }} 2012
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
