--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -39,6 +39,9 @@
           </ul>
           <ul class="nav subscription pull-right" data-subscription="rss">
             <li>
+              <a href="https://plus.google.com/113678915294267870552" title="Follow on G+">G+</a>
+            </li>
+            <li>
               <a href="{{BASE_PATH}}/atom.xml" rel="nofollow" title="subscribe via RSS">RSS</a>
             </li>
           </ul>
